--- a/style.css
+++ b/style.css
@@ -9,3 +9,14 @@ h1{
     width: 300px;
     margin-left: 40%;
 }
+#cv-template{
+    display: none;
+}
+.myimg{
+  
+    border-radius: 50%;
+    width: 200px;
+}
+.background{
+    background-color: aqua;
+}
